# PyPRS

./: AUTHORS  LICENSE  README.md  pyproject.toml
PyPRS/: procedure.py
PyPRS/Procedures/: FBKT.py  GSP.py  KT.py  PASS.py  procedure.py
PyPRS/UserInterface/: GUI.py
PyPRS/Utilities/: etafunc.py  rinott.py
data/: TPMax_57624.txt
docs/: A Demo Application.md  How to Use PyPRS.md  Input Parameters Main.md  Input Parameters.md  MRG32k3a_numba Main.md  MRG32k3a_numba.md  Main Page.md  Output.md  Procedure File Main.md  Procedure File.md  Scripts for Invoking the Procedures in PyPRS Main.md  Scripts for Invoking the Procedures in PyPRS.md  Uploading Files Main.md  Uploading Files.md
files/: A Demo Application.md  How to Use PyPRS.md  Input Parameters Main.md  Input Parameters.md  MRG32k3a_numba Main.md  MRG32k3a_numba.md  Output.md  Procedure File Main.md  Procedure File.md  Scripts for Invoking the Procedures in PyPRS Main.md  Scripts for Invoking the Procedures in PyPRS.md  Uploading Files Main.md  Uploading Files.md
scripts/: Equal Allocation.py  Generate Alternatives Information File.py  TPMax_57624_simulation_function.py
src/Procedures/: FBKT.py  GSP.py  KT.py  PASS.py  procedure.py
src/SampleGen/: SampleGenerate.py
src/UserInterface/: GUI.py
src/Utilities/: etafunc.py  rinott.py
